Fixed #11: Added `overflow: auto` to `code` and `overflow: hidden` to `pre`.

--- a/public/css/src/components/_typo.scss
+++ b/public/css/src/components/_typo.scss
@@ -134,8 +134,9 @@ blockquote {
  */
 code {
   white-space: pre;
+  overflow: auto;
 }
 
 pre {
-  overflow: auto;
+  overflow: hidden;
 }
